--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,5 +17,5 @@ spring:
     jpa:
         database-platform: org.hibernate.dialect.H2Dialect
         hibernate:
-            ddl-auto: create
+            ddl-auto: update
         show-sql: true
