adding postgre databse configuration

--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,12 @@
 			<version>${org.mapstruct.version}</version>
 			<scope>provided</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<scope>runtime</scope>
+    	</dependency>
 	</dependencies>
 
 	<build>
