--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,21 +1,18 @@
 spring:
     application:
-        name: SO TI ESTAGIOS
+        name: marp
 
     profiles:
-        active: test
+        active: test  
 
     datasource:
-        url: jdbc:h2:mem:mydb
-        username: sa
-        password:
-        driverClassName: org.h2.Driver
-    h2:
-        console:
-            enabled: true
-            path: /h2-console
+        url: jdbc:postgresql://localhost:5432/so_ti_estagios  
+        username: postgres
+        password: 6337311
+        driverClassName: org.postgresql.Driver
+
     jpa:
-        database-platform: org.hibernate.dialect.H2Dialect
         hibernate:
-            ddl-auto: update
-        show-sql: true
+            ddl-auto: create
+        show-sql: false
+        database-platform: org.hibernate.dialect.PostgreSQLDialect 
