--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
         name: marp
 
     profiles:
-        active: test  
+        active: prod  
 
     datasource:
         url: jdbc:postgresql://localhost:5432/so_ti_estagios  
@@ -13,6 +13,6 @@ spring:
 
     jpa:
         hibernate:
-            ddl-auto: create
+            ddl-auto: update
         show-sql: false
         database-platform: org.hibernate.dialect.PostgreSQLDialect 
